--- a/guestPages/css/homepage.css
+++ b/guestPages/css/homepage.css
@@ -311,3 +311,28 @@ h6:first-child {
   top: 3px;
   z-index: 10000;
 }
+@media (hover: hover) {
+  ._1hwmklnf:hover {
+    cursor: pointer !important;
+    color: inherit !important;
+    text-decoration: underline !important;
+  }
+}
+._1hwmklnf {
+  font-family: inherit !important;
+  font-weight: inherit !important;
+  font-style: inherit !important;
+  font-variant: inherit !important;
+  appearance: none !important;
+  background: transparent !important;
+  border: none !important;
+  cursor: pointer !important;
+  margin: 0px !important;
+  padding: 0px !important;
+  user-select: auto !important;
+  text-decoration: none !important;
+  color: rgb(34, 34, 34) !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+  outline: none !important;
+}
