--- a/guestPages/css/homepage.css
+++ b/guestPages/css/homepage.css
@@ -13228,3 +13228,37 @@ html.scrollbar-gutter[class][class] {
     text-decoration: underline !important;
   }
 }
+._1d3iagv {
+  -webkit-box-pack: center !important;
+  -webkit-box-align: center !important;
+  appearance: none !important;
+  display: inline-flex !important;
+  border-radius: 50% !important;
+  border: 1px solid rgba(0, 0, 0, 0.08) !important;
+  outline: none !important;
+  margin: 0px !important;
+  padding: 0px !important;
+  color: rgb(34, 34, 34) !important;
+  background-color: rgba(255, 255, 255, 0.9) !important;
+  cursor: pointer !important;
+  touch-action: manipulation !important;
+  align-items: center !important;
+  justify-content: center !important;
+  background-clip: padding-box !important;
+  box-shadow: transparent 0px 0px 0px 1px, transparent 0px 0px 0px 4px,
+    rgb(0 0 0 / 18%) 0px 2px 4px !important;
+  transition: -ms-transform 0.25s ease 0s, -webkit-transform 0.25s ease 0s,
+    transform 0.25s ease 0s !important;
+  width: 32px !important;
+  height: 32px !important;
+}
+@media (hover: hover) {
+  ._1d3iagv:hover {
+    border-color: rgba(0, 0, 0, 0.08) !important;
+    background-color: rgb(255, 255, 255) !important;
+    color: rgb(0, 0, 0) !important;
+    box-shadow: transparent 0px 0px 0px 1px, transparent 0px 0px 0px 4px,
+      rgb(0 0 0 / 12%) 0px 6px 16px !important;
+    transform: scale(1.04) !important;
+  }
+}
