--- a/guestPages/css/homepage.css
+++ b/guestPages/css/homepage.css
@@ -13262,3 +13262,57 @@ html.scrollbar-gutter[class][class] {
     transform: scale(1.04) !important;
   }
 }
+._r752or {
+  -webkit-box-pack: center !important;
+  -webkit-box-align: end !important;
+  align-items: flex-end !important;
+  display: flex !important;
+  justify-content: center !important;
+  height: 100% !important;
+}
+._szn05y {
+  display: flex !important;
+  overflow: hidden !important;
+  padding-bottom: 12px !important;
+  max-width: 55px !important;
+}
+@supports (overflow: clip) {
+  ._szn05y {
+    overflow: clip !important;
+  }
+}
+._1b2klj3 {
+  -webkit-box-pack: center !important;
+  -webkit-box-align: end !important;
+  align-items: flex-end !important;
+  display: flex !important;
+  justify-content: center !important;
+  list-style-type: none !important;
+  margin: 0px !important;
+  padding: 0px !important;
+  transition: -ms-transform 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955) 0s,
+    -webkit-transform 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955) 0s,
+    transform 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955) 0s !important;
+}
+._4o74ccl {
+  background: rgb(255, 255, 255) !important;
+  border-radius: 50% !important;
+  height: 6px !important;
+  margin-left: 2.5px !important;
+  margin-right: 2.5px !important;
+  min-width: 6px !important;
+  transition: opacity 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955) 0s !important;
+  width: 6px !important;
+  opacity: 1 !important;
+}
+._1k9ksvh {
+  background: rgb(255, 255, 255) !important;
+  border-radius: 50% !important;
+  height: 6px !important;
+  margin-left: 2.5px !important;
+  margin-right: 2.5px !important;
+  min-width: 6px !important;
+  opacity: 0.6 !important;
+  transition: opacity 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955) 0s !important;
+  width: 6px !important;
+}
