remove cards-wrapper margin on sm

--- a/guestPages/css/homepage.css
+++ b/guestPages/css/homepage.css
@@ -13510,4 +13510,7 @@ html.scrollbar-gutter[class][class] {
   #header-desktop {
     display: block;
   }
+  .cards-wrapper {
+    margin-top: 16px;
+  }
 }
