--- a/guestPages/css/homepage.css
+++ b/guestPages/css/homepage.css
@@ -13701,3 +13701,15 @@ html.scrollbar-gutter[class][class] {
     display: inline-flex;
   }
 }
+
+._6tbg2q {
+  height: 0px !important;
+  width: 0px !important;
+  position: absolute !important;
+}
+@supports (object-fit: cover) {
+  ._6tbg2q {
+    height: 100% !important;
+    width: 100% !important;
+  }
+}
