--- a/pages/css/products.css
+++ b/pages/css/products.css
@@ -820,3 +820,21 @@
   font-weight: 600 !important;
   text-decoration: underline !important;
 }
+._mgs235q {
+  min-height: 56px !important;
+  width: 100% !important;
+  border: none !important;
+  outline: none !important;
+  margin: 0px !important;
+  padding: 26px 12px 10px !important;
+  background-color: transparent !important;
+  font-family: inherit !important;
+  font-size: 14px !important;
+  font-weight: inherit !important;
+  line-height: 18px !important;
+  appearance: none !important;
+  overflow: hidden !important;
+  text-overflow: ellipsis !important;
+  white-space: nowrap !important;
+  color: rgb(113, 113, 113) !important;
+}
