--- a/pages/css/products.css
+++ b/pages/css/products.css
@@ -18992,3 +18992,206 @@ html.scrollbar-gutter[class][class] {
 .atm_9s_1txwivl {
   display: flex;
 }
+._1e8a8lh {
+  min-height: 56px !important;
+  width: 100% !important;
+  border: none !important;
+  outline: none !important;
+  margin: 0px !important;
+  padding: 26px 12px 10px !important;
+  background-color: transparent !important;
+  color: inherit !important;
+  font-family: inherit !important;
+  font-size: 14px !important;
+  font-weight: inherit !important;
+  line-height: 18px !important;
+  appearance: none !important;
+  overflow: hidden !important;
+  text-overflow: ellipsis !important;
+  white-space: nowrap !important;
+}
+._1mkur1q {
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  -webkit-box-align: center !important;
+  color: rgb(34, 34, 34) !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  font-weight: 400 !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+  align-items: center !important;
+  display: flex !important;
+  flex-direction: column !important;
+  list-style-type: none !important;
+  margin: 8px 0px 0px !important;
+  padding: 0px !important;
+  text-align: center !important;
+}
+._qqc9rm {
+  margin-top: 8px !important;
+  white-space: normal !important;
+}
+._1cvivhm {
+  margin-top: 24px !important;
+}
+._1wpjhdm {
+  font-size: 16px !important;
+  line-height: 20px !important;
+  color: rgb(34, 34, 34) !important;
+  font-weight: 400 !important;
+  white-space: normal !important;
+}
+._18x0pkv {
+  font-size: 14px !important;
+  line-height: 18px !important;
+  color: rgb(113, 113, 113) !important;
+  font-weight: 400 !important;
+  padding-top: 16px !important;
+}
+._18x0pkv:first-child {
+  padding-top: 0px !important;
+}
+._1fpuhdl {
+  -webkit-box-pack: justify !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+  color: rgb(34, 34, 34) !important;
+  font-weight: 400 !important;
+  padding-top: 16px !important;
+  display: flex !important;
+  flex-wrap: nowrap !important;
+  justify-content: space-between !important;
+}
+._1fpuhdl:first-child {
+  padding-top: 0px !important;
+}
+._18x3iiu {
+  order: 1 !important;
+}
+._10d7v0r {
+  display: inline-flex !important;
+  position: relative !important;
+}
+._101nvu7m {
+  font-size: inherit !important;
+  font-family: inherit !important;
+  font-style: inherit !important;
+  font-variant: inherit !important;
+  line-height: inherit !important;
+  appearance: none !important;
+  background: transparent !important;
+  border: 0px !important;
+  cursor: pointer !important;
+  margin: 0px !important;
+  padding: 0px !important;
+  user-select: auto !important;
+  color: rgb(113, 113, 113) !important;
+  text-decoration: underline 1px !important;
+  border-radius: 4px !important;
+  font-weight: 400 !important;
+  outline: none !important;
+}
+._m6lwl6 {
+  color: rgb(34, 34, 34) !important;
+  text-align: left !important;
+}
+.a8jt5op[class][class] {
+  clip: rect(0 0 0 0);
+  clip-path: inset(100%);
+  height: 1px;
+  overflow: hidden;
+  overflow: clip;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+.dir.a8jt5op[class][class] {
+  border: 0;
+  padding: 0;
+}
+._1k4xcdh {
+  order: 2 !important;
+  white-space: nowrap !important;
+}
+._1emnh212 {
+  font-size: 14px !important;
+  line-height: 18px !important;
+  color: rgb(113, 113, 113) !important;
+  font-weight: 400 !important;
+  border-top: 1px solid rgb(221, 221, 221) !important;
+  margin-top: 24px !important;
+  padding-top: 24px !important;
+}
+._1qh0b5n {
+  -webkit-box-pack: justify !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+  color: rgb(34, 34, 34) !important;
+  font-weight: 600 !important;
+  padding-top: 16px !important;
+  display: flex !important;
+  flex-wrap: nowrap !important;
+  justify-content: space-between !important;
+}
+._1qh0b5n:first-child {
+  padding-top: 0px !important;
+}
+._1a20785 {
+  color: rgb(34, 34, 34) !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  font-weight: 400 !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+  display: flex !important;
+  animation-name: keyframe_1b8bzh6 !important;
+  animation-duration: 300ms !important;
+}
+._xomkrgi {
+  -webkit-box-pack: center !important;
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  -webkit-box-align: start !important;
+  min-height: 40px !important;
+  display: flex !important;
+  align-items: flex-start !important;
+  flex-direction: column !important;
+  justify-content: center !important;
+  padding-right: 16px !important;
+  padding-left: 0px !important;
+}
+._psmgei {
+  display: inline-block !important;
+  width: 100% !important;
+}
+._mtn6h9x {
+  color: rgb(34, 34, 34) !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  font-weight: 600 !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+  margin-bottom: 0px !important;
+  margin-right: 8px !important;
+  display: inline !important;
+}
+._1hgrncy {
+  color: rgb(34, 34, 34) !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  font-weight: 400 !important;
+  align-self: stretch !important;
+  margin-right: 8px !important;
+}
+._wjmxoe {
+  background-color: rgb(255, 255, 255) !important;
+  background-position: left top !important;
+  background-repeat: no-repeat !important;
+  border-radius: 50% !important;
+  display: inline-block !important;
+  flex-shrink: 0 !important;
+  background-size: 32px !important;
+  height: 32px !important;
+  width: 32px !important;
+}
