--- a/pages/css/products.css
+++ b/pages/css/products.css
@@ -19195,3 +19195,463 @@ html.scrollbar-gutter[class][class] {
   height: 32px !important;
   width: 32px !important;
 }
+._1a3k4v7q {
+  position: relative !important;
+  display: flex !important;
+  width: 100% !important;
+  margin: 0px !important;
+  border: none transparent !important;
+  border-radius: 0px !important;
+  cursor: pointer !important;
+  padding: 0px !important;
+  text-align: left !important;
+  color: black !important;
+  background-color: transparent !important;
+  box-shadow: none !important;
+}
+._19y8o0j {
+  position: relative !important;
+  flex: 1 1 0% !important;
+  padding: 0px !important;
+  overflow: hidden !important;
+}
+._1pskxuxd {
+  position: absolute !important;
+  top: 12px !important;
+  left: 12px !important;
+  right: 12px !important;
+  margin: 0px !important;
+  padding: 0px !important;
+  pointer-events: none !important;
+  font-size: 10px !important;
+  line-height: 12px !important;
+  text-transform: uppercase !important;
+  font-weight: 800 !important;
+  max-width: 100% !important;
+  overflow: hidden !important;
+  text-overflow: ellipsis !important;
+  white-space: nowrap !important;
+  color: rgb(193, 53, 21) !important;
+}
+._1e8a8lh {
+  min-height: 56px !important;
+  width: 100% !important;
+  border: none !important;
+  outline: none !important;
+  margin: 0px !important;
+  padding: 26px 12px 10px !important;
+  background-color: transparent !important;
+  color: inherit !important;
+  font-family: inherit !important;
+  font-size: 14px !important;
+  font-weight: inherit !important;
+  line-height: 18px !important;
+  appearance: none !important;
+  overflow: hidden !important;
+  text-overflow: ellipsis !important;
+  white-space: nowrap !important;
+}
+._1axzs88q {
+  position: relative !important;
+  flex: 1 1 0% !important;
+  padding: 0px !important;
+  overflow: hidden !important;
+  border-left: 1px solid rgb(193, 53, 21) !important;
+}
+._t26glb {
+  position: absolute !important;
+  pointer-events: none !important;
+  border-style: solid !important;
+}
+._1yhfti2 {
+  display: flex !important;
+  color: rgb(193, 53, 21) !important;
+  font-size: 12px !important;
+  line-height: 16px !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  font-weight: 400 !important;
+}
+._1fa1ets {
+  position: relative !important;
+  background-color: rgb(247, 247, 247) !important;
+  border-top: 1px solid rgb(221, 221, 221) !important;
+  padding-bottom: 80px !important;
+}
+@supports (padding: env(safe-area-inset-bottom)) {
+  ._1fa1ets {
+    padding-bottom: calc(80px + env(safe-area-inset-bottom)) !important;
+  }
+}
+@media (min-width: 744px) {
+  ._1fa1ets {
+    padding-bottom: 0px !important;
+  }
+}
+._1s94zl78 {
+  padding-left: 24px !important;
+  padding-right: 24px !important;
+  margin: 0px auto !important;
+  max-width: 1440px !important;
+}
+@media (min-width: 375px) {
+  ._1s94zl78 {
+    padding-left: 24px !important;
+    padding-right: 24px !important;
+  }
+}
+@media (min-width: 744px) {
+  ._1s94zl78 {
+    padding-left: 40px !important;
+    padding-right: 40px !important;
+  }
+}
+@media (min-width: 950px) {
+  ._1s94zl78 {
+    padding-left: 40px !important;
+    padding-right: 40px !important;
+  }
+}
+@media (min-width: 1128px) {
+  ._1s94zl78 {
+    padding-left: 80px !important;
+    padding-right: 80px !important;
+  }
+}
+@supports (--a: a) {
+  ._1s94zl78 {
+    max-width: var(--page-shell-max-content-width, 1440px) !important;
+  }
+}
+._fyxf74 {
+  padding: 32px 0px !important;
+}
+@media (min-width: 744px) {
+  ._fyxf74 {
+    -webkit-box-direction: normal !important;
+    -webkit-box-orient: vertical !important;
+    display: flex !important;
+    flex-direction: column !important;
+    padding-top: 40px !important;
+    padding-bottom: 40px !important;
+  }
+}
+@media (min-width: 1128px) {
+  ._fyxf74 {
+    -webkit-box-direction: normal !important;
+    -webkit-box-orient: horizontal !important;
+    flex-direction: row !important;
+    padding-top: 48px !important;
+    padding-bottom: 48px !important;
+    margin-left: -12px !important;
+    margin-right: -12px !important;
+  }
+}
+@media (min-width: 1128px) {
+  ._1l3ys1i {
+    flex: 1 0 0% !important;
+    padding-left: 12px !important;
+    padding-right: 12px !important;
+  }
+}
+._1l3ys1i:not(:last-child) {
+  padding-bottom: 24px !important;
+  margin-bottom: 24px !important;
+  border-bottom: 1px solid rgb(221, 221, 221) !important;
+}
+@media (min-width: 1128px) {
+  ._1l3ys1i:not(:last-child) {
+    padding-bottom: 0px !important;
+    margin-bottom: 0px !important;
+    border-bottom: 0px !important;
+  }
+}
+._x6q4xl {
+  color: rgb(34, 34, 34) !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+  font-weight: 800 !important;
+}
+._otc65q {
+  margin-top: 0px !important;
+  margin-bottom: 0px !important;
+  font-size: unset !important;
+  font-weight: unset !important;
+}
+._yuolfv {
+  list-style: none !important;
+  margin: 0px !important;
+  padding: 0px !important;
+}
+@media (min-width: 744px) {
+  ._yuolfv {
+    display: flex !important;
+    flex-wrap: wrap !important;
+    margin-left: -12px !important;
+    margin-right: -12px !important;
+  }
+}
+@media (min-width: 1128px) {
+  ._yuolfv {
+    display: block !important;
+    margin-left: 0px !important;
+    margin-right: 0px !important;
+  }
+}
+._wmuyow {
+  margin-top: 12px !important;
+}
+@media (min-width: 744px) {
+  ._wmuyow {
+    flex-basis: 33.3333% !important;
+    padding-left: 12px !important;
+    padding-right: 12px !important;
+  }
+}
+@media (min-width: 1128px) {
+  ._wmuyow {
+    margin-top: 16px !important;
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+  }
+}
+._1e6wtwm5 {
+  font-family: inherit !important;
+  font-weight: inherit !important;
+  font-style: inherit !important;
+  font-variant: inherit !important;
+  text-decoration: none !important;
+  color: rgb(34, 34, 34) !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+  outline: none !important;
+}
+.dprtsy3[class][class] {
+  display: none;
+}
+.t2pjd0h[class][class] {
+  top: 0;
+  bottom: 0;
+  pointer-events: none;
+  position: var(--transition-layer_position, fixed);
+  opacity: var(--view-to-view-transition-element-opacity, 0);
+}
+.dir.t2pjd0h[class][class] {
+  right: 0;
+  left: 0;
+}
+.t6qlz27[class][class] {
+  position: absolute;
+  z-index: 2000;
+  opacity: var(--view-to-view-transition-element-opacity, 0);
+  visibility: var(--view-to-view-transition-element-visibility, hidden);
+}
+.t1nrbpkt[class][class] {
+  top: 0;
+  bottom: 0;
+  pointer-events: none;
+  position: var(--transition-layer_position, fixed);
+}
+.dir.t1nrbpkt[class][class] {
+  right: 0;
+  left: 0;
+}
+._b21f4g {
+  border: 0px !important;
+  clip: rect(0 0 0 0) !important;
+  -webkit-clip-path: inset(100%) !important;
+  clip-path: inset(100%) !important;
+  height: 1px !important;
+  overflow: hidden !important;
+  padding: 0px !important;
+  position: absolute !important;
+  white-space: nowrap !important;
+  width: 1px !important;
+  margin-top: -1px !important;
+}
+._1wsqynx {
+  padding-top: 24px !important;
+  padding-bottom: 24px !important;
+  border-top: 1px solid rgb(221, 221, 221) !important;
+}
+@media (min-width: 744px) {
+  ._1udzt2s {
+    display: none !important;
+  }
+}
+._p03egf {
+  margin-bottom: 16px !important;
+}
+._jro6t0 {
+  display: flex !important;
+}
+._19c5bku:not(last-child) {
+  margin-right: 24px !important;
+}
+._f2hxk3s {
+  -webkit-box-align: center !important;
+  font-family: inherit !important;
+  font-weight: inherit !important;
+  font-style: inherit !important;
+  font-variant: inherit !important;
+  appearance: none !important;
+  background: transparent !important;
+  border: 0px !important;
+  cursor: pointer !important;
+  margin: 0px !important;
+  padding: 0px !important;
+  user-select: auto !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+  color: rgb(34, 34, 34) !important;
+  display: flex !important;
+  align-items: center !important;
+  white-space: nowrap !important;
+  text-decoration: none !important;
+}
+._14tkmhr {
+  margin-right: 8px !important;
+}
+._144l3kj {
+  font-weight: 600 !important;
+}
+._19c5bku:not(last-child) {
+  margin-right: 24px !important;
+}
+._f2hxk3s {
+  -webkit-box-align: center !important;
+  font-family: inherit !important;
+  font-weight: inherit !important;
+  font-style: inherit !important;
+  font-variant: inherit !important;
+  appearance: none !important;
+  background: transparent !important;
+  border: 0px !important;
+  cursor: pointer !important;
+  margin: 0px !important;
+  padding: 0px !important;
+  user-select: auto !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+  color: rgb(34, 34, 34) !important;
+  display: flex !important;
+  align-items: center !important;
+  white-space: nowrap !important;
+  text-decoration: none !important;
+}
+._pgfqnw {
+  font-weight: 600 !important;
+}
+@media (min-width: 744px) {
+  ._pd8gea {
+    text-align: center !important;
+  }
+}
+@media (min-width: 1128px) {
+  ._pd8gea {
+    text-align: left !important;
+  }
+}
+@media (min-width: 1128px) {
+  ._wjo0ey {
+    overflow: hidden !important;
+    padding-right: 2px !important;
+  }
+}
+._1br4kkl {
+  font-size: 14px !important;
+  line-height: 18px !important;
+  color: rgb(34, 34, 34) !important;
+  display: inline-block !important;
+}
+@media (min-width: 1128px) {
+  ._1br4kkl {
+    margin-right: 19px !important;
+  }
+}
+@media (min-width: 1128px) {
+  ._opoa3c {
+    display: inline-block !important;
+    margin-left: -19px !important;
+  }
+}
+._j8ldew {
+  display: none !important;
+}
+@media (min-width: 1128px) {
+  ._j8ldew {
+    display: inline-block !important;
+  }
+}
+._15vc6yg {
+  display: inline-block !important;
+  text-align: center !important;
+  width: 19px !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+}
+._15m7xnk {
+  display: none !important;
+}
+@media (min-width: 744px) {
+  ._15m7xnk {
+    display: initial !important;
+  }
+}
+@media (min-width: 1128px) {
+  ._15m7xnk {
+    display: none !important;
+  }
+}
+._1juxowe {
+  -webkit-box-pack: center !important;
+  display: flex !important;
+  justify-content: center !important;
+  margin-bottom: 16px !important;
+}
+._xh0r19 {
+  margin-left: 32px !important;
+}
+._115qwnm {
+  list-style: none !important;
+  margin: 0px !important;
+  padding: 0px !important;
+  display: flex !important;
+}
+._kdkpwk:not(:last-child) {
+  margin-right: 24px !important;
+}
+._1vwyakty {
+  font-size: inherit !important;
+  font-family: inherit !important;
+  font-weight: inherit !important;
+  font-style: inherit !important;
+  font-variant: inherit !important;
+  line-height: inherit !important;
+  color: rgb(34, 34, 34) !important;
+  text-decoration: none !important;
+}
+._ar9stc {
+  display: none !important;
+}
+@media (min-width: 1128px) {
+  ._ar9stc {
+    -webkit-box-pack: justify !important;
+    display: flex !important;
+    justify-content: space-between !important;
+  }
+}
+.d-none {
+  display: none !important;
+}
+@media (min-width: 1200px) {
+  .d-lg-flex {
+    display: flex !important;
+  }
+  .d-lg-none {
+    display: none !important;
+  }
+}
+.mw-100 {
+  max-width: 100%;
+}
