add reviews till page 3

--- a/css/utilities.css
+++ b/css/utilities.css
@@ -7,6 +7,10 @@
     display: block !important;
   }
 
+  .d-md-inline-block {
+    display: inline-block !important;
+  }
+
   .d-md-none {
     display: none !important;
   }
