add payments/ mobile

--- a/pages/payments/css/payments.css
+++ b/pages/payments/css/payments.css
@@ -14321,3 +14321,95 @@ _qgvrjoy {
   font-size: 20px !important;
   font-weight: 800 !important;
 }
+._2b0qwl {
+  -webkit-box-align: center !important;
+  -ms-flex-align: center !important;
+  background: white !important;
+  display: -webkit-box !important;
+  display: -moz-box !important;
+  display: -ms-flexbox !important;
+  display: -webkit-flex !important;
+  display: flex !important;
+  -webkit-align-items: center !important;
+  align-items: center !important;
+  height: 64px !important;
+  padding-left: 16px !important;
+  padding-right: 16px !important;
+  position: relative !important;
+  z-index: 1 !important;
+}
+._1o4zwko {
+  margin-right: auto !important;
+  overflow: hidden !important;
+}
+._1dxtmbip {
+  cursor: pointer !important;
+  display: inline-block !important;
+  margin: 0 !important;
+  position: relative !important;
+  text-align: center !important;
+  border-color: black !important;
+  width: auto !important;
+  -ms-touch-action: manipulation !important;
+  touch-action: manipulation !important;
+  font-family: var(--e-ls-qkw) !important;
+  font-size: var(--c-zdwk-p) !important;
+  line-height: var(--j-p-z-kco) !important;
+  font-weight: var(--jx-zk-pv) !important;
+  border-radius: var(--go-h-jh-l) !important;
+  border-width: 1px !important;
+  border-style: solid !important;
+  outline: none !important;
+  padding-top: 8px !important;
+  padding-bottom: 8px !important;
+  padding-left: 8px !important;
+  padding-right: 8px !important;
+  -webkit-transition: box-shadow 0.2s ease, -webkit-transform 0.1s ease,
+    transform 0.1s ease !important;
+  -moz-transition: box-shadow 0.2s ease, transform 0.1s ease !important;
+  transition: box-shadow 0.2s ease, -ms-transform 0.1s ease,
+    -webkit-transform 0.1s ease, transform 0.1s ease !important;
+  -webkit-tap-highlight-color: transparent !important;
+  border: none !important;
+  background: transparent !important;
+  color: var(--f-k-smk-x) !important;
+  text-decoration: none !important;
+  margin-left: -8px !important;
+  margin-right: -8px !important;
+}
+._1ran6xy {
+  -webkit-box-align: center !important;
+  -ms-flex-align: center !important;
+  -webkit-flex: 1 !important;
+  -ms-flex: 1 1 0% !important;
+  flex: 1 !important;
+  display: -webkit-box !important;
+  display: -moz-box !important;
+  display: -ms-flexbox !important;
+  display: -webkit-flex !important;
+  display: flex !important;
+  -webkit-align-items: center !important;
+  align-items: center !important;
+  padding-left: 8px !important;
+  padding-right: 8px !important;
+  padding-bottom: 0px !important;
+  padding-top: 0px !important;
+  background-color: transparent !important;
+  border: none !important;
+  color: #222222 !important;
+  max-width: 100% !important;
+}
+._zzdavs {
+  padding-right: 8px !important;
+}
+._1s0b0yb {
+  text-overflow: ellipsis !important;
+  white-space: nowrap !important;
+  overflow: hidden !important;
+  color: #222222 !important;
+  font-size: 14px !important;
+  font-weight: 600 !important;
+}
+._qnqe0zo {
+  display: none;
+}
