--- a/css/layouts.css
+++ b/css/layouts.css
@@ -113,6 +113,9 @@
     background-color: var(--header_brand-color, var(--ihf-tp-q)) !important;
   }
 }
+._10oic88b {
+  background: #ffff;
+}
 /* /Header */
 /* Footer */
 ._1tt196k {
