fix wishlist css

--- a/pages/css/wishlist.css
+++ b/pages/css/wishlist.css
@@ -13316,7 +13316,7 @@ html.scrollbar-gutter[class][class] {
 }
 ._1tt196k {
   -webkit-box-align: center !important;
-  display: flex !important;
+  display: flex;
   align-items: center !important;
   border-top: 1px solid rgb(235, 235, 235) !important;
   position: fixed !important;
