--- a/css/utilities.css
+++ b/css/utilities.css
@@ -2,6 +2,10 @@
   display: none !important;
 }
 
+.w-100 {
+  width: 100% !important;
+}
+
 @media (min-width: 744px) {
   .d-md-block {
     display: block !important;
