add errors inline in signup_login

--- a/pages/css/signup_login.css
+++ b/pages/css/signup_login.css
@@ -10377,3 +10377,113 @@ html.scrollbar-gutter[class][class] {
   position: relative !important;
   z-index: 1 !important;
 }
+._gbcdoct {
+  position: relative !important;
+  cursor: text !important;
+  display: flex !important;
+  min-height: 56px !important;
+  width: 100% !important;
+  margin: 0px !important;
+  border: none transparent !important;
+  border-radius: 0px !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+  font-weight: 400 !important;
+  color: rgb(34, 34, 34) !important;
+  box-shadow: none !important;
+  background-color: transparent !important;
+}
+._475dd78 {
+  position: absolute !important;
+  top: 18px !important;
+  left: 12px !important;
+  right: 12px !important;
+  margin: 0px !important;
+  padding: 0px !important;
+  pointer-events: none !important;
+  transform-origin: 0% 0% !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+  transition: -ms-transform 0.15s cubic-bezier(0.455, 0.03, 0.515, 0.955) 0s,
+    -webkit-transform 0.15s cubic-bezier(0.455, 0.03, 0.515, 0.955) 0s,
+    transform 0.15s cubic-bezier(0.455, 0.03, 0.515, 0.955) 0s !important;
+  transform: translateY(-8px) scale(0.75) !important;
+  color: rgb(193, 53, 21) !important;
+  font-weight: 800 !important;
+}
+._11hx67x {
+  max-width: 100% !important;
+  overflow: hidden !important;
+  text-overflow: ellipsis !important;
+  white-space: nowrap !important;
+}
+
+._fywymp7 {
+  display: flex !important;
+  opacity: 1 !important;
+}
+._1dnryfrb {
+  padding-top: 26px !important;
+  padding-left: 12px !important;
+  margin-right: -6px !important;
+  color: #717171 !important;
+}
+._c5rhl5 {
+  width: 100% !important;
+  border: none !important;
+  outline: none !important;
+  padding-left: 0 !important;
+  padding-right: 0 !important;
+  padding-top: 0 !important;
+  padding-bottom: 0 !important;
+  margin-left: 12px !important;
+  margin-right: 12px !important;
+  margin-top: 26px !important;
+  margin-bottom: 6px !important;
+  min-height: 1px !important;
+  color: inherit !important;
+  background-color: transparent !important;
+  font-family: inherit !important;
+  font-size: inherit !important;
+  font-weight: inherit !important;
+  line-height: inherit !important;
+  -webkit-appearance: none !important;
+}
+._4l12l8 {
+  margin-top: 8px !important;
+}
+._1yhfti2 {
+  display: flex !important;
+  color: rgb(193, 53, 21) !important;
+  font-size: 12px !important;
+  line-height: 16px !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  font-weight: 400 !important;
+}
+._k8r05be {
+  position: relative !important;
+  cursor: text !important;
+  display: flex !important;
+  min-height: 56px !important;
+  width: 100% !important;
+  margin: 0px !important;
+  border: none !important;
+  border-radius: 8px !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+  font-weight: 400 !important;
+  color: rgb(34, 34, 34) !important;
+  box-shadow: rgb(193 53 21) 0px 0px 0px 1px inset !important;
+  background-color: rgb(255, 248, 246) !important;
+}
+._wfo3ii {
+  margin-top: 16px !important;
+  margin-bottom: 24px !important;
+}
