add switch off in privacy-and-sharing

--- a/pages/css/privacy-and-sharing.css
+++ b/pages/css/privacy-and-sharing.css
@@ -9163,3 +9163,36 @@ html.scrollbar-gutter[class][class] {
   font-weight: 400 !important;
   margin-bottom: 16px !important;
 }
+._1hzx1vsg {
+  border-radius: 32px !important;
+  border-style: solid !important;
+  border-width: 1px !important;
+  cursor: pointer !important;
+  height: 32px !important;
+  position: relative !important;
+  min-width: 48px !important;
+  width: 48px !important;
+  outline: none !important;
+  background-color: rgb(176, 176, 176) !important;
+  border-color: rgb(176, 176, 176) !important;
+}
+._vr1ztso {
+  -webkit-box-pack: center !important;
+  -webkit-box-align: center !important;
+  background-color: rgb(255, 255, 255) !important;
+  border-radius: 50% !important;
+  border-style: solid !important;
+  border-width: 2px !important;
+  height: 32px !important;
+  left: -1px !important;
+  position: absolute !important;
+  top: -1px !important;
+  transform: translate3d(0px, 0px, 0px) !important;
+  width: 32px !important;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  transition: -ms-transform 250ms ease-in-out 0s,
+    -webkit-transform 250ms ease-in-out 0s, transform 250ms ease-in-out 0s !important;
+  border-color: rgb(176, 176, 176) !important;
+}
